[gd_scene load_steps=8 format=2]

[ext_resource path="res://Object/Component/TargetDetector/TargetDetector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assate/GlowCircle.png" type="Texture" id=2]
[ext_resource path="res://Assate/BigHostileBulletSprite.png" type="Texture" id=3]
[ext_resource path="res://Object/Bullet/BigHostileBullet.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.188235, 0, 0.415686 ), Color( 1, 0, 0, 1 ) ]
}

[node name="BigHostileBullet" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
texture = ExtResource( 3 )

[node name="Glow" type="Sprite" parent="Sprite"]
modulate = Color( 1, 0.131711, 0, 0.591147 )
show_behind_parent = true
texture = ExtResource( 2 )

[node name="TargetDetector" parent="." instance=ExtResource( 1 )]
visible = false
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TargetDetector"]
shape = SubResource( 2 )

[node name="LifeTime" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 3 )

[connection signal="area_entered" from="TargetDetector" to="." method="_on_TargetDetector_detecting_area"]
[connection signal="body_entered" from="TargetDetector" to="." method="_on_TargetDetector_detecting_body"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
